# nbmediasplit

./: .gitignore  Makefile  ipynb_convert.py  nbmediasplit  nbmediasplit.py  pyproject.toml  readme.md  tasks.py
.github/workflows/: pytest.yaml
src/nbmediasplit/: nbmediasplit.py
tests/: test_nbmediasplit.py
tests/input/: generate_test_data.ipynb  test.ipynb
