[tool.poetry]
name = "nbmediasplit"
version = "0.1.0"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
nbmediasplit = "nbmediasplit:main"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
