[tool.poetry]
name = "nbmediasplit"
version = "0.1.1"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.scripts]
nbmediasplit = "nbmediasplit:main"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9"
click = "^7.1"
lxml = "^4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
