[tool.poetry]
name = "nbmediasplit"
version = "0.1.1"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/wrist/nbmediasplit"

[tool.poetry.scripts]
nbmediasplit = "nbmediasplit.nbmediasplit:main"

[tool.poetry.dependencies]
python = "^3.5"
beautifulsoup4 = "^4.9"
click = "^7.1"
lxml = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
autopep8 = "^1.5"
invoke = "^1.4"
soundfile = "^0.10.3"

[tool.autopep8]
max_line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
